DOMPromise::whenPromiseIsSettled is asserting in service worker https://bugs.webkit.org/show_bug.cgi?id=205440

Reviewed by Chris Dumez.

The promise.get(@then) is sometimes throwing an exception probably due to service worker being stopped.
We need to catch the JS exception and exit early if the getter fails.
Covered by existing service worker tests in debug mode.

* bindings/js/JSDOMPromise.cpp:
(WebCore::DOMPromise::whenPromiseIsSettled):


Canonical link: https://commits.webkit.org/218694@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@253813 268f45cc-cd09-0410-ab3c-d52691b4dbfc